--- a/composer.json
+++ b/composer.json
@@ -15,9 +15,8 @@
     ],
     "require": {
         "php": ">=5.4",
-        "florianwolters/component-core-debugprint": "0.2.*",
-        "florianwolters/component-core-immutable": "0.1.*",
-        "florianwolters/component-core-equality": "0.2.*"
+        "florianwolters/component-core-debugprint": "@dev",
+        "florianwolters/component-core-valueobject": "@dev"
     },
     "autoload": {
         "psr-0": {
