--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -19,7 +19,7 @@ tools:
      command: phpcs
      enabled: true
      filter:
-       paths: [src/php]
+       paths: [src/php, src/tests]
        excluded_paths: []
      config:
        standard: PSR2
@@ -34,13 +34,10 @@ tools:
     command: phpcpd
     min_lines: 5
     min_tokens: 70
-    excluded_dirs: [src/tests, vendor]
+    excluded_dirs: [vendor]
     names:
       - "*.php"
     enabled: true
-    filter:
-      paths: [src/php]
-      excluded_paths: []
 
   php_cs_fixer:
     extensions:
@@ -54,18 +51,25 @@ tools:
       level: psr2
       fixers: []
 
+  php_loc:
+    command: phploc
+    names:
+      - "*.php"
+    excluded_dirs: [src/tests, vendor]
+    enabled: true
+
   php_mess_detector:
     extensions:
       - php
     command: phpmd
     enabled: true
     filter:
-      paths: [src/php]
+      paths: [src/php, src/tests]
       excluded_paths: []
     config:
       rulesets:
-        - controversial
         - codesize
+        - controversial
         - design
         - naming
         - unused
