--- a/composer.json
+++ b/composer.json
@@ -20,9 +20,7 @@
     },
     "autoload": {
         "psr-0": {
-            "FlorianWolters": [
-                "src/php"
-            ]
+            "FlorianWolters": "src/php"
         }
     }
 }
