--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,7 +1,33 @@
+# .scrutinizer.yml
+#
+# YAML configuration file for the continuous inspection platform "Scrutinizer".
+#
+# This program is free software: you can redistribute it and/or modify it under
+# the terms of the GNU Lesser General Public License as published by the Free
+# Software Foundation, either version 3 of the License, or (at your option) any
+# later version.
+#
+# This program is distributed in the hope that it will be useful, but WITHOUT
+# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
+# FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public License for more
+# details.
+#
+# You should have received a copy of the GNU Lesser General Public License
+# along with this program. If not, see <http://gnu.org/licenses/lgpl.txt>.
+#
+# Author:    Florian Wolters <wolters.fl@gmail.com>
+# Copyright: 2012-2013 Florian Wolters
+# License:   http://gnu.org/licenses/lgpl.txt LGPL-3.0+
+# Link:      http://github.com/FlorianWolters/PHP-Component-Geometry
+
 inherit: false
 
 before_commands:
   - composer install
+
+filter:
+  paths: [src/php/*, src/tests/*]
+  excluded_paths: []
 
 tools:
   php_code_coverage:
@@ -18,9 +44,6 @@ tools:
        - php
      command: phpcs
      enabled: true
-     filter:
-       paths: [src/php, src/tests]
-       excluded_paths: []
      config:
        standard: PSR2
        sniffs: []
@@ -34,7 +57,7 @@ tools:
     command: phpcpd
     min_lines: 5
     min_tokens: 70
-    excluded_dirs: [vendor]
+    excluded_dirs: [nbproject, review, vendor]
     names:
       - "*.php"
     enabled: true
@@ -44,9 +67,6 @@ tools:
       - php
     command: php-cs-fixer
     enabled: false
-    filter:
-      paths: [src/php, src/tests]
-      excluded_paths: []
     config:
       level: psr2
       fixers: []
@@ -55,7 +75,7 @@ tools:
     command: phploc
     names:
       - "*.php"
-    excluded_dirs: [src/tests, vendor]
+    excluded_dirs: [nbproject, review, src/tests, vendor]
     enabled: true
 
   php_mess_detector:
@@ -63,16 +83,12 @@ tools:
       - php
     command: phpmd
     enabled: true
-    filter:
-      paths: [src/php, src/tests]
-      excluded_paths: []
     config:
       rulesets:
         - codesize
         - controversial
         - design
         - naming
-        - unused
 
   php_analyzer: true
 
