Prepared PEAR package version 0.1.1.

--- a/build.properties
+++ b/build.properties
@@ -23,13 +23,13 @@
 project.name=Geometry
 project.majorVersion=0
 project.minorVersion=1
-project.patchLevel=0
+project.patchLevel=1
 project.snapshot=false
 project.apistability=beta
 
 project.summary="Models and operations on objects related to geometry as a PHP component."
 project.description="Models and operations on objects related to geometry as a PHP component."
-project.notes="Initial release."
+project.notes="Changed project dependencies to stable versions."
 project.channel=pear.florianwolters.de
 
 project.author.name=Florian Wolters
