--- a/package.xml
+++ b/package.xml
@@ -85,6 +85,20 @@ ${contents}</dir>
     <changelog>
         <release>
             <version>
+                <release>0.1.1</release>
+                <api>0.1</api>
+            </version>
+            <stability>
+                <release>stable</release>
+                <api>beta</api>
+            </stability>
+            <date>2013-06-23</date>
+            <license uri="http://gnu.org/licenses/lgpl.txt">LGPL-3.0+</license>
+            <notes>Changed project dependencies to stable versions.</notes>
+        </release>
+
+        <release>
+            <version>
                 <release>0.1.0</release>
                 <api>0.1</api>
             </version>
