--- a/package.xml
+++ b/package.xml
@@ -77,6 +77,20 @@ ${contents}</dir>
                 <min>1.9.4</min>
             </pearinstaller>
 
+           <package>
+                <name>DebugPrint</name>
+                <channel>pear.florianwolters.de</channel>
+                <min>0.2.0</min>
+                <max>0.2.99</max>
+            </package>
+
+           <package>
+                <name>ValueObject</name>
+                <channel>pear.florianwolters.de</channel>
+                <min>0.1.0</min>
+                <max>0.1.99</max>
+            </package>
+
         </required>
     </dependencies>
 
